--- a/DatingAPP-SPA/src/app/Components/navbar/navbar.component.html
+++ b/DatingAPP-SPA/src/app/Components/navbar/navbar.component.html
@@ -1,33 +1,28 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <a class="navbar-brand" href="#">DatinAPP</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto" *ngIf="authservicio.logueado()">
       <li class="nav-item active">
         <a class="nav-link" href="#">Partidos <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
-     
-      <li class="nav-item" *ngIf="Loggint()">
-        <a class="nav-link" >logout</a>
-      </li>
-    </ul>
-    <div class="dropdown" *ngIf="Loggint()">
-      <button class="dropdown-toggle"  id="dropdownMenuButton" data-toggle="dropdown">
-        Bienvenido Usuario
+     </ul>
+    <div class="dropdown" *ngIf="authservicio.logueado()" dropdown>
+      <button class="dropdown-toggle" dropdownToggle >
+        Bienvenido {{authservicio.decoradorToken?.unique_name | titlecase}}
       </button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item">Editar Perfil</a>
-        <a class="dropdown-item" >Another action</a>
-        <a class="dropdown-item">Logout</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item"><i class="fas fa-id-badge"></i>Editar Perfil</a>
+        <a class="dropdown-item" (click)="Logout()"><i class="far fa-window-close"></i>Logout</a>
       </div>
     </div>
-    <form  *ngIf="!Loggint()" #f= "ngForm" class="form-inline my-2 my-lg-0" (submit)="Login(f)">
+    <form  *ngIf="!authservicio.logueado()" #f= "ngForm" class="form-inline my-2 my-lg-0" (submit)="Login(f)">
       <input class="form-control mr-sm-2 required" type="text" placeholder="Usuario" [(ngModel)]="model.Nombre"  name= nombre #nombre="ngModel" requiered>
       <input class="form-control mr-sm-2 requiered" type="password" placeholder="Password" [(ngModel)]="model.password" name= password  #password = "ngModel" requiered>
       <button [disabled]="f.invalid" class="btn btn-success my-2 my-sm-0" type="submit">Iniciar Sesion</button>
